[tool.poetry]
name = "geok"
version = "0.1.0"
description = "pydantic validation for Esri geometries."
authors = ["Samuel Cook <scook@esri.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.6.1"
arcgis = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
black = "^20.8b1"
coverage = "^5.3"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
